src/TagzApp.Web/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}

#taggedContent {
	width: 100%;
	background-color: #f5f5f5;
	padding: 0.3em;
	display: grid;
	grid-gap: 5px;
	grid-template-columns: repeat(auto-fill, minmax(275px,1fr));
	grid-auto-rows: 10px;
}

	#taggedContent article {
		position: relative;
		/*font-size: 0.6em;*/
		border: 1px solid #E2E8ED;
		border-radius: 20px;
		background-color: #FFF;
		padding: 8px 16px 16px 16px;
		overflow: hidden;
		cursor: pointer;
		box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.04);
		display: grid;
		grid-template-columns: 36px 1fr 16px;
		grid-template-rows: 36px 14px 1fr 1fr;
		grid-column-gap: 10px;
		grid-row-gap: 15px;
	}

	#taggedContent .ProfilePicture {
		grid-area: 1 / 1 / 2 / 2;
		width: 36px;
		height: 36px;
		border-radius: 50%;
	}

	#taggedContent .byline {
		grid-area: 1 / 2 / 2 / 3;
	}


	#taggedContent .provider {
		grid-area: 1 / 3 / 2 / 4;
		font-size: 20px;
	}

	#taggedContent .time {
		grid-area: 2 / 1 / 3 / 4;
		color: #697882;
		font-family: Helvetica;
		font-size: 14px;
		font-style: normal;
		font-weight: 400;
		line-height: normal;
	}

	#taggedContent .content {
		grid-area: 3 / 1 / 4 / 4;
		display: block;
		width: 100%;
		line-height: 1.2em;
		padding-bottom: 10px;
	}

	#taggedContent .contentcard {
		grid-area: 4 / 1 / 5 / 4;
		display: block;
		width: 100%;
	}

		#taggedContent .contentcard img {
			border-radius: 4px;
		}

	#taggedContent .author {
		color: #000;
		font-family: Helvetica;
		font-size: 16px;
		font-style: normal;
		font-weight: 700;
		line-height: normal;
	}

	#taggedContent .authorUserName {
		color: #697882;
		font-family: Helvetica;
		font-size: 14px;
		font-style: normal;
		font-weight: 400;
		line-height: normal;
	}

#overlayDisplay.show {
	width: 40em;
	background-color: white;
	border: 1px solid black;
	padding: 0.3em 0.8em 0.8em 0.8em;
	position: relative;
}

#overlayDisplay * {
	font-family: Arial, Helvetica, sans-serif;
}

#overlayDisplay > span {
	display: block;
}


#overlayDisplay .author {
	font-weight: bold;
	font-size: 1.2em;
	text-align: left;
	width: calc(100% - 1.1em);
	overflow: hidden;
}

#overlayDisplay .time {
	text-align: left;
	font-size: 0.8em;
	font-weight: bold;
	margin-bottom: 0.5em;
}

#overlayDisplay .bi {
	position: absolute;
	right: 0.4em;
	top: 0.4em;
}

#overlayDisplay img {
	width: 40em;
	padding: 2px;
}

